--- a/pcgrr/vignettes/annotation_resources.Rmd
+++ b/pcgrr/vignettes/annotation_resources.Rmd
@@ -22,10 +22,10 @@ output: rmarkdown::html_document
 
 ### Protein domains/functional features
   * [UniProt/SwissProt KnowledgeBase](http://www.uniprot.org) - resource on protein sequence and functional information (2024_03)
-  * [Pfam](http://pfam.xfam.org) - database of protein families and domains (v35.0, November 2021)
+  * [Pfam](https://www.ebi.ac.uk/interpro/entry/pfam/#table) - database of protein families and domains (v35.0, November 2021)
 
 ### Knowledge resources on gene and protein targets
-  * [CancerMine](https://zenodo.org/record/4925789#.YNT8K5MzY7Q) - Literature-mined database of tumor suppressor genes/proto-oncogenes (v50, March 2023)
+  * [CancerMine](https://zenodo.org/records/7689627) - Literature-mined database of tumor suppressor genes/proto-oncogenes (v50, March 2023)
   * [Open Targets Platform](https://www.targetvalidation.org/) - Database on disease-target associations, molecularly targeted drugs and tractability aggregated from multiple sources (literature, pathways, mutations) (2024.06)
 
 ### Notes on variant annotation datasets
