--- a/pcgrr/vignettes/variant_classification.Rmd
+++ b/pcgrr/vignettes/variant_classification.Rmd
@@ -32,10 +32,12 @@ PCGR prioritizes and evaluates variants according to clinical actionability. Cur
 
 This tier model attempts to adopt concensus recommendations by AMP/ASCO/CAP, as outlined in [Li et al., 2017](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5707196/):
 
- - *Tier 1: Variants of strong clinical significance* - constitutes variants linked to predictive, prognostic, or diagnostic evidence items in the [CIViC database](http://civic.genome.wustl.edu) or the [Cancer Biomarkers Database](https://www.cancergenomeinterpreter.org/biomarkers) that are
+ - *Tier I: Variants of strong clinical significance* - constitutes variants linked to predictive, prognostic, or diagnostic evidence items in the [CIViC database](https://civicdb.org) or the [Cancer Biomarkers Database](https://www.cancergenomeinterpreter.org/biomarkers) that are
 	 - A: found within the same tumor type/class as specified by the user, AND
 	 - B: of strong clinical evidence (i.e. part of guidelines, validated or discovered in late clinical trials)
- - *Tier 2: Variants of potential clinical significance* - constitutes other variants linked to predictive, prognostic, or diagnostic evidence items in the [CIViC database](http://civic.genome.wustl.edu) or the [Cancer Biomarkers Database](https://www.cancergenomeinterpreter.org/biomarkers) that are either
+ - *Tier II: Variants of potential clinical significance* - constitutes other variants linked to predictive, prognostic, or diagnostic evidence items in the [CIViC database](https://civicdb.org) or the [Cancer Biomarkers Database](https://www.cancergenomeinterpreter.org/biomarkers) that are either
 	 - A: of strong clinical evidence in other tumor types/classes than the one specified by the user, OR
 	 - B: of weak clinical evidence (early trials, case reports etc.) in the same tumor type/class as specified by the user
- - *Tier 3: Variants of uncertain clinical significance* - includes other coding variants found in proto-oncogenes or tumor suppressor genes (SNVs and indels only)
+ - *Tier III: Variants of uncertain clinical significance* - includes other coding variants found in proto-oncogenes or tumor suppressor genes (SNVs and indels only)
+ 
+In PCGR, we skip the classification of variants into the AMP/ASCO/CAP-specified *Tier IV* (benign/likely benign variants), but rather take a more cautious approach. Specifically, for SNVs/indels that do not fall into tier I, II, or III, we classify them into *Tier V: Other coding variants*, which includes other protein-coding variants, as well as *Tier VI: Other non-coding variants*, which includes synonymous variants, intronic variants, and other variants in non-coding regions.
